# index_search_monorepo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/data_operations/: .gitignore  Makefile  README.md  pyproject.toml
app/data_operations/docs/: one_off_reports.md
app/data_operations/src/kbart_file_generator/: kbart_file_generator.py
app/data_operations/src/metadata_extractor/: __init__.py  metadata_generator.py  (+2 more)
app/data_operations/tests/: test_kbart_file_generator.py  test_metadata_generator.py  test_one_off_reports.py
app/ht_indexer/: Dockerfile  LICENSE  Makefile  README.md  filter_ids.txt  main.py  pyproject.toml
app/ht_indexer/tests/: conftest.py
app/solr_query/: Dockerfile  Makefile  README.md  pyproject.toml
app/solr_query/src/: indexing_data.sh
app/solr_query/tests/: conftest.py  ht_full_text_searcher_test.py
base/ht_search/: Dockerfile  README.md  pyproject.toml
ht_full_text_search/: Dockerfile  LICENSE  README.md  config_query.yaml  config_search.py  conftest.py  docker-compose.yml  env.example  indexing_data.sh  init.sh  main.py  process_full_text_query.py  pyproject.toml
ht_full_text_search/.github/workflows/: tests.yml
ht_full_text_search/config_files/full_text_search/: config_facet_filters.yaml
ht_full_text_search/ht_full_text_search/: config_search.py  conftest.py  export_all_results.py  full_text_query_test.py  ht_full_text_query.py  ht_full_text_query_test.py  ht_full_text_searcher.py  ht_full_text_searcher_test.py
ht_full_text_search/ht_full_text_search/config_files/: __init__.py
ht_full_text_search/ht_full_text_search/ht_query/: ht_query.py  ht_query_test.py
ht_full_text_search/ht_full_text_search/ht_searcher/: ht_searcher.py  ht_searcher_test.py
ht_full_text_search/ht_full_text_search/ht_solr_monitoring/: solr_query_monitoring.py
ht_full_text_search/ht_query/: ht_query.py  ht_query_test.py
ht_full_text_search/ht_searcher/: ht_searcher.py  ht_searcher_test.py
ht_full_text_search/ht_solr_monitoring/: solr_query_monitoring.py
ht_full_text_search/ht_utils/: ht_access_rights.py
ht_full_text_search/scripts/: 26th Regiment of Foot_solr6_ClassicSimilarity.csv  26th Regiment of Foot_solr8_MB25Similarity.csv  Natural history_solr6_ClassicSimilarity.csv  Natural history_solr8_MB25Similarity.csv  extracting_diference_solr_results.py  generate_query_results.py  generate_query_results_in_batch.py  generate_query_results_in_batch_solr6.py  get_collection_statistics.py  get_list_ids_fromSolr_results.py  solr6_ClassicSimilarity.csv  solr8_MB25Similarity.csv  solr_engines_total_hits.py
ht_full_text_search/solr_dataset/: chi097007580_solr_full_text.xml  chi37192520_solr_full_text.xml  chi67160761_solr_full_text.xml  coo31924015154861_solr_full_text.xml  coo31924017234778_solr_full_text.xml
ht_indexer/: .gitignore  Dockerfile  Dockerfile_alpine_pip  README.md  conftest.py  docker-compose.yml  document_retriever_status.txt  env.example  filter_ids.txt  ht_indexer_config.py  indexer_config.py  init_ht_indexer.sh  main.py  pyproject.toml  qodana.yaml  requeriments.txt  requirements.txt  run_indexer_processor.sh  run_retriever_processor.sh  run_retriever_processor_kubernetes.sh  run_retriever_service_by_file.py  sample_data_creator.sh
ht_indexer/.github/workflows/: build-manual.yaml  build.yaml  deploy.yaml  tag-release.yml  tests.yaml
ht_indexer/catalog_metadata/: catalog_metadata.py  catalog_metadata_test.py
ht_indexer/data/document_generator/: 39015051333915.mets.xml  fullrecord.xml
ht_indexer/document_generator/: document_generator.py  document_generator_service.py  document_generator_service_local.py  document_generator_test.py  full_text_document_generator.py  generator_arguments.py  indexer_config.py  mets_file_extractor.py  mets_file_extractor_test.py  mysql_data_extractor.py
ht_indexer/document_indexer_service/: document_indexer_local_service.py  document_indexer_service.py  document_indexer_service_test.py  indexer_arguments.py
ht_indexer/document_retrieval_service/: catalog_retrieval_service.py  document_retrieval_service.py  document_retrieval_service_test.py  full_text_search_retrieval_service.py
ht_indexer/document_retriever_service/: catalog_retrieve_service_test.py  catalog_retriever_service.py  document_retrieval_service_test.py  document_retriever_service.py  full_text_search_retriever_by_file.py  full_text_search_retriever_service.py  full_text_search_retriever_service_test.py  ht_status_retriever_service.py  list_htids_indexer_test.txt  retriever_arguments.py  retriever_services_utils.py  retriever_services_utils_test.py  run_retriever_service_by_file.py  run_retriever_service_by_file_test.py
ht_indexer/ht_document/: ht_document.py  ht_document_test.py  ht_pairtree.py
ht_indexer/ht_indexer_api/: ht_indexer_api.py  ht_indexer_api_test.py  main.py
ht_indexer/ht_indexer_monitoring/: ht_indexer_tracktable.py  ht_indexer_tracktable_test.py  monitoring_arguments.py
ht_indexer/ht_queue_service/: queue_connection.py  queue_connection_dead_letter.py  queue_consumer.py  queue_consumer_test.py  queue_multiple_consumer.py  queue_multiple_consumer_test.py  queue_producer.py  queue_producer_test.py
ht_indexer/ht_utils/: convert_solr_schema2csv.py  ht_logger_test.py  ht_mysql.py  ht_mysql_test.py  ht_pairtree.py  ht_utils.py  ht_utils_test.py  query_maker.py  sample_data_generator.py  text_processor.py
ht_indexer/ht_utils/sample_data/: Dockerfile  full-output-catalog-index.json  sample_data_creator.sh  sample_data_generator.py  sample_data_ht_ids.txt
ht_indexer/utils/: convert_solr_schema2csv.py  ht_logger.py  ht_logger_test.py  ht_mysql.py  ht_pairtree.py  ht_pairtree_test.py  text_processor.py
libs/common_lib/: pyproject.toml
libs/common_lib/tests/: ht_marc_json_reader_test.py  ht_utils_test.py
libs/ht_search/: README.md  init.sh  pyproject.toml
libs/ht_search/tests/: conftest.py
projects/ht_indexer/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
projects/ht_indexer/tests/: conftest.py
(+170 files in other folders)
