[project]
name = "index_search_monorepo"
version = "0.1.0"
description = "Indexing and Searching documents in Solr"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "ruff>=0.4.2,<0.5",
    "pytest>=8.0.2,<9",
    "mypy>=1.12.0,<2",
    "types-pyyaml>=6.0.12,<7",
    "types-requests>=2.31.12,<3",
]

[tool.uv.workspace]
members = ["app/*", "libs/*"]
exclude = []  # Exclude the individual packages to avoid trying to build/install them as part of the monorepo root.

[tool.uv]
# default-groups = "all"
package = false # This is the monorepo root, not a package itself. So we set this to false to avoid trying to build/install it as a package.

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show  extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"


[tool.ruff]
# Target Python version
target-version = "py312"

# Max line length to match Black
line-length = 100

# Enable specific rule sets (Ruff supports codes from tools like flake8, isort, etc.)
lint.select = [
  "E",  # pycodestyle (errors)
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP",  # pyupgrade
  "N",  # pep8-naming
]

# Optionally ignore specific rules
lint.ignore = ["E501"]  # E501: line too long (skip this if you trust Black for formatting)

# Exclude common directories
exclude = ["build", "dist", ".venv", ".git", "__pycache__"]

# Autofix issues when possible
fix = true


[tool.mypy]
# Tell mypy to ignore missing imports, some libraries may not have type stubs (e.g., pika)
# module = "pika"
strict = true
ignore_missing_imports = true


