[tool.poetry]
name = "ht-full-text-search"
version = "0.1.0"
description = "Repository for full-text search in Solr"
authors = ["y"]
readme = "README.md"
packages = [{include = "ht_full_text_search"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.4"
pyyaml = "^6.0.1"
solrq = "^1.1.2"
matplotlib = "^3.8.2"
pytest = "^8.0.2"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
