[virtualenvs]
in-project = true

[tool.poetry]
name = "ht-indexer"
version = "0.1.0"
description = "Indexing XML documents in Solr"
authors = ["lisepul <lisepul@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
lxml = "^5.2.1"
pandas = "^2.2.2"
mysql-client = "^0.0.1"
mysql-connector-python = "^8.1.0"
mysql = "^0.0.3"
pypairtree = "^1.1.0"
pydocstyle = "^6.3.0"
pytest-cov = "^5.0.0"
cryptography = "^42.0.5"
requests = "^2.31.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pytest = "^8.2.0"
nest-asyncio = "^1.5.6"


#[tool.poetry.group.dev.dependencies]
#requests = "^2.31.0"
#fastapi = "^0.100.0"
#uvicorn = "^0.23.1"
#pytest = "^7.4.0"
#nest-asyncio = "^1.5.6"
python-dotenv = "^1.0.0"
ruff = "^0.4.2"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
arrow = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
