[project]
name = "data_operations"
version = "0.1.0"
description = "Package for retrieving and analyzing data related to HathiTrust"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.14"
readme = "README.md"
keywords = [
    "data retrieval",
    "metadata",
    "HathiTrust",
]
classifiers = [
    "Programming Language :: Python :: 3.14",
]
dependencies = ["ht-utils"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"

[tool.uv]
default-groups = "all"
package = true # This is the main application package, so we set this to true to allow building/installing it as a package.

# Adding local sources to link the application to the shared libraries in the monorepo.
[tool.uv.sources]
ht-utils = {workspace = true, editable = true}

