[project]
name = "ht-indexer"
version = "0.1.0"
description = "Indexing XML documents in Solr"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.12.3,<0.13",
    "lxml>=5.2.1,<6",
    "pandas>=2.2.2,<3",
    "mysqlclient>=2.1.0,<3",
    "mysql-connector-python>=9.2.0,<10",
    "mysql>=0.0.3,<0.0.4",
    "requests>=2.31.0,<3",
    "fastapi>=0.111.1,<0.112",
    "uvicorn>=0.30.3,<0.31",
    "nest-asyncio>=1.5.6,<2",
    "python-dotenv>=1.0.0,<2",
    "pika>=1.3.2,<2",
    "pika-stubs>=0.1.3,<0.2",
    "orjson>=3.10.15,<4",
    "ht-search",
    "ht-utils",
]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"
filterwarnings = [
    "ignore::DeprecationWarning:pika.*"
]

[tool.uv]
default-groups = "all"
package = true # This is the main application package, so we set this to true to allow building/installing it as a package.

# Adding local sources to link the application to the shared libraries in the monorepo.
[tool.uv.sources]
ht-search = {workspace = true, editable = true}
ht-utils = {workspace = true, editable = true}




