[project]
name = "ht-indexer"
version = "0.2.0"
description = "Indexing XML documents in Solr"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "lxml>=6.1.0,<7",
    "pandas>=3.0.2,<4",
    "mysqlclient>=2.2.8,<3",
    "mysql-connector-python>=9.6.0,<10",
    "mysql>=0.0.3,<0.0.4",
    "requests>=2.33.0,<3",
    "fastapi>=0.136.0,<0.137",
    "uvicorn>=0.45.0,<0.46",
    "nest-asyncio>=1.6.0,<2",
    "python-dotenv>=1.2.2,<2",
    "pika>=1.3.2,<2",
    "pika-stubs>=0.1.3,<0.2",
    "orjson>=3.11.8,<4",
    "ht-search",
    "ht-utils",
]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"
filterwarnings = [
    "ignore::DeprecationWarning:pika.*"
]

[tool.uv]
default-groups = "all"
package = true # This is the main application package, so we set this to true to allow building/installing it as a package.

# Adding local sources to link the application to the shared libraries in the monorepo.
[tool.uv.sources]
ht-search = {workspace = true, editable = true}
ht-utils = {workspace = true, editable = true}




