[project]
name = "solr_query"
version = "0.1.0"
description = "Package for search in Solr"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.14"
readme = "README.md"
keywords = [
    "solr",
    "full-text-search",
    "HathiTrust",
]
classifiers = [
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.136.0,<0.137",
    "uvicorn>=0.45.0,<0.46",
    "openpyxl>=3.1.5,<4",
    "ht-search",
    "ht-utils",
]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"

[tool.uv]
default-groups = "all"
package = true # This is the main application package, so we set this to true to allow building/installing it as a package.


# Adding local sources to link the application to the shared libraries in the monorepo.
[tool.uv.sources]
ht-search = {workspace = true, editable = true}
ht-utils = {workspace = true, editable = true}

