[project]
name = "ht-utils"
version = "0.1.0"
description = "Python utilities for HathiTrust indexing and searching"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.12.3,<0.13",
    "lxml>=5.2.1,<6",
    "pandas>=2.2.2,<3",
    "pypairtree>=1.1.0,<2",
    "pydocstyle>=6.3.0,<7",
    "pytest-cov>=5.0.0,<6",
    "pytest>=8.0.2,<9",
    "arrow>=1.3.0,<2",
    "sqlalchemy>=2.0.44,<3",
    "mysql-connector-python>=9.4.0,<10",
    "mysqlclient>=2.1.0,<3",
    "pymarc>=5.3.1",
]


[dependency-groups]
dev = []

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"

[tool.uv]
default-groups = "all"


# Adding local sources to link the application to the shared libraries in the monorepo.
[tool.uv.sources]
ht-utils = {workspace = true, editable = true}


