[project]
name = "ht-utils"
version = "0.2.0"
description = "Python utilities for HathiTrust indexing and searching"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "lxml>=6.1.0,<7",
    "pandas>=3.0.2,<4",
    "pypairtree>=1.1.0,<2",
    "arrow>=1.4.0,<2",
    "sqlalchemy>=2.0.49,<3",
    "mysql-connector-python>=9.6.0,<10",
    "pyyaml>=6.0.3,<7"
]


[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7.1.0,<8"
]

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"

[tool.uv]
default-groups = "all"


# Adding local sources to link the application to the shared libraries in the monorepo.
[tool.uv.sources]


