[project]
name = "ht-search"
version = "0.1.0"
description = "Repository for full-text search in Solr"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.11,<4"
readme = "README.md"
keywords = [
    "solr",
    "full-text-search",
    "HathiTrust",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.31.0,<3",
    "pandas>=2.1.4,<3",
    "pyyaml>=6.0.1,<7",
    "matplotlib>=3.8.2,<4",
]


[dependency-groups]
dev = []

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"

[tool.uv]
default-groups = "all"

# Adding local sources to link the application to the shared libraries in the monorepo.
[tool.uv.sources]
ht-search = {workspace = true, editable = true}


