[project]
name = "ht-search"
version = "0.2.0"
description = "Repository for full-text search in Solr"
authors = [{ name = "lisepul", email = "lisepul@umich.edu" }]
requires-python = ">=3.14"
readme = "README.md"
keywords = [
    "solr",
    "full-text-search",
    "HathiTrust",
]
classifiers = [
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.33.0,<3",
    "pandas>=3.0.2,<4",
    "pyyaml>=6.0.3,<7",
    "matplotlib>=3.10.8,<4",
]


[dependency-groups]
dev = []

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"

[tool.uv]
default-groups = "all"

# Adding local sources to link the application to the shared libraries in the monorepo.
[tool.uv.sources]
ht-search = {workspace = true, editable = true}


