[virtualenvs]
in-project = true

[tool.pytest.ini_options]
minversion = "6.0"
# -p no:cacheprovider is to avoid pytest warning about pytest_cache fixture
# -ra is to show extra test summary info; -q is to suppress pytest header
addopts = "-ra -q -p no:cacheprovider"

[tool.poetry]
name = "ht-indexer"
version = "0.1.0"
description = "Indexing XML documents in Solr"
authors = ["lisepul <lisepul@umich.edu>"]
readme = "README.md"
packages = [
    { include = "catalog_metadata", from = "src" },
    { include = "ht_document", from = "src" },
    { include = "ht_indexer_api", from = "src" },
    { include = "ht_queue_service", from = "src" },
    { include = "ht_indexer_monitoring", from = "src" },
    { include = "document_retriever_service", from = "src" },
    { include = "document_generator", from = "src" },
    { include = "document_indexer_service", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
lxml = "^5.2.1"
pandas = "^2.2.2"
mysqlclient = "^2.1.0"
mysql-connector-python = "^9.2.0"
mysql = "^0.0.3"
cryptography = "^44.0.2"
requests = "^2.31.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
nest-asyncio = "^1.5.6"
python-dotenv = "^1.0.0"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
arrow = "^1.3.0"
orjson = "^3.10.15"
ht-search = {path = "../../base/ht_search"}
ht-utils = {path = "../../base/ht_utils"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
